--- a/FE_Onboarding/src/Modules/Admin/components/CrudForm.module.css
+++ b/FE_Onboarding/src/Modules/Admin/components/CrudForm.module.css
@@ -117,3 +117,33 @@ select:focus {
 .cancelButton:hover {
   background-color: #cbd5e0;
 }
+
+.passwordWrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.showPasswordButton {
+  position: absolute;
+  right: 0.75rem;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 1.2rem;
+  color: #718096;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+}
+
+.showPasswordButton:hover {
+  color: #3182ce;
+  background-color: #ffffff !important;
+}
+
+/* Deja espacio en el input para el icono */
+.passwordWrapper .input {
+  padding-right: 2.5rem;
+}
